# fibre-oracle

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3e430ec93e2d_.py  aad373a362e5_inspections_table_created_now.py  ccdc2529e8d1_create_users_table.py  e49945607d50_inspection_table_created.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: auth.py  health.py  inspections.py
backend/app/core/: config.py
backend/app/domain/: models.py
backend/app/domain/inspection/: models.py  schema.py  service.py
backend/app/domain/user/: models.py  schema.py  service.py
backend/app/infrastructure/db/: session.py
backend/app/workers/: celery_app.py  tasks.py
