[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "redis",
    "celery",
    "pydantic>=2.0",
    "python-jose",
    "passlib[bcrypt]",
    "opencv-python",
    "torch",
]