[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "aiofiles",
    "redis",
    "celery",
    "pydantic>=2.0",
    "python-jose",
    "passlib[bcrypt]",
    "opencv-python",
    "torch",
    "pydantic_settings",
    "pydantic[email]",
    "python-multipart"
]

[dependency-groups]
dev = [
  "alembic",
  "psycopg2-binary",
  "pytest",
]
